# RNBOSynthJuce

./: .gitignore  CMakeLists.txt  README.md  RNBOSynth.jucer  TESTRNBO.maxpat
.github/workflows/: android.yml  build.yml  ios.yml
Source/: Main.cpp  MainComponent.cpp  MainComponent.h
export/: PLACER_L_EXPORT_RNBO_ICI.txt  SimpleSynth.rnbopat.cpp  description.json  presets.json
patch/: SimpleSynth.rnbopat
